--- a/main.css
+++ b/main.css
@@ -52,7 +52,8 @@ button {
     align-items: center;
     padding-top: 115px;
     padding-bottom: 115px;
-    background: url('img/back.png') no-repeat;
+    background: url(./img/back.png) no-repeat;
+    
     background-position: center;
     background-size: cover;
 }
@@ -79,3 +80,109 @@ button {
     max-width: 550px;
 }
 
+.form_container {
+    width: 550px;
+}
+
+.form{
+    background-color: #1D263A;
+    color: #fff;
+    padding-top: 115px;
+    padding-bottom: 115px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.form form{    
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 60px;
+}
+
+.form h1 {
+    font-size: 48px;
+}
+
+.form p {
+    font-size: 18px;
+    opacity: 0.65;
+}
+
+
+.form_group {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: left;    
+}
+
+.form label{
+    font-size:18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.form input, .form select{
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0 20px 0 20px;
+    border-radius: 15px;
+    border: none;
+
+}
+
+.form__submit{
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 40px;
+}
+select {
+    appearance: none;
+  }
+
+  input {
+    outline: none;
+  }
+  button:hover{
+    background-color: #f6980c;
+    box-shadow: 0 16px 36px rgba(246, 152, 12/20%);
+  }
+  button{
+    transition: background-color 0.3s ease-in;
+  }
+
+  footer{
+    padding: 90px 20px 90px 20px;
+    font-size: 16px;
+    font-weight: 600;
+  }
+
+  .footer_copyright{
+    margin-top: 40px;
+    text-align: center;
+    opacity: 0.5;
+  }
+
+  .footer_container{
+    display: flex;
+    justify-content: center;
+  
+  }
+
+  .footer_group{
+    margin-right: 80px;
+  }
+
+  h3{
+    font-size: 16px;
+    opacity: 0.7;
+    margin-bottom: 30px;
+  }
+  .footer_links{
+    display: flex;
+    flex-direction: column;
+  }
+  .footer_links a{
+    margin-bottom: 15px;
+  }
