--- a/main.css
+++ b/main.css
@@ -9,6 +9,10 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    position: sticky;
+    background-color: white;
+    top:0;
+     z-index: 1;
 }
 
 .header__logo {
@@ -45,7 +49,19 @@ button {
 .about_sun-image {
     width: 100px;
     height: 100px;
+    position: absolute;
+    animation: rotation 10s linear infinite;
 }
+
+@keyframes rotation{
+    0%{
+      transform: rotate(0deg);
+    }
+  
+    100%{
+      transform: rotate(360deg);
+    }
+  }
 .about {
     display: flex;
     justify-content: space-around;
@@ -174,7 +190,7 @@ select {
     margin-right: 80px;
   }
 
-  h3{
+  footer h3{
     font-size: 16px;
     opacity: 0.7;
     margin-bottom: 30px;
@@ -186,3 +202,76 @@ select {
   .footer_links a{
     margin-bottom: 15px;
   }
+
+
+
+/* Планшеты */
+@media (max-width: 1024px) {
+   .about {
+       padding: 115px 20px;
+   }
+ 
+   .about h1 {
+       font-size: 36px;
+       line-height: 40px;
+   }
+ 
+   .about__image {
+       width: 280px;
+   }
+ 
+   .about__sun-image {
+       width: 75px;
+       height: 75px;
+   }
+}
+ 
+/* Мобильные устройства */
+@media (max-width: 720px) {
+   header {
+       padding: 10px;
+   }
+ 
+   .header__logo {
+       height: 20px;
+   }
+ 
+   header a {
+       margin-right: 10px;
+   }
+ 
+   .about {
+       flex-direction: column-reverse;
+       padding: 50px 10px;
+   }
+ 
+   .about h1 {
+       font-size: 36px;
+       line-height: 40px;
+   }
+ 
+   .about__image {
+       width: 280px;
+   }
+ 
+   .about__sun-image {
+       width: 75px;
+       height: 75px;
+   }
+ 
+   .form {
+       padding: 50px 10px;
+   }
+ 
+   .form h1 {
+       font-size: 36px;
+   }
+ 
+   footer {
+       padding: 50px 10px;
+   }
+ 
+   .footer__container {
+       flex-direction: column;
+   }
+}
